--- a/package.json
+++ b/package.json
@@ -9,23 +9,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react": "^19.2.3",
-    "react-dom": "^19.2.3",
-    "framer-motion": "11.0.8",
-    "@google/genai": "0.1.1",
-    "lucide-react": "0.344.0",
-    "yjs": "13.6.10",
-    "@hocuspocus/provider": "2.11.0",
-    "@tiptap/react": "2.2.4",
-    "@tiptap/starter-kit": "2.2.4",
-    "@tiptap/extension-collaboration": "2.2.4",
-    "@tiptap/extension-collaboration-cursor": "2.2.4",
-    "y-protocols": "^1.0.7"
+    "@google/genai": "latest",
+    "@hocuspocus/provider": "latest",
+    "@hocuspocus/server": "^3.4.3",
+    "@tiptap/extension-collaboration": "latest",
+    "@tiptap/extension-collaboration-cursor": "latest",
+    "@tiptap/react": "latest",
+    "@tiptap/starter-kit": "latest",
+    "@tiptap/y-tiptap": "latest",
+    "framer-motion": "latest",
+    "lucide-react": "latest",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "y-prosemirror": "latest",
+    "y-protocols": "latest",
+    "yjs": "latest"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/node": "^20.12.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "typescript": "^5.4.0",
+    "vite": "^5.2.0"
   }
 }
